# SOSO

./: CMakeLists.txt  package.xml
config/: test.rviz
include/: optimizer.h  robot.h  visualization.h
launch/: robotic.launch
src/: optimizer.cpp  robot.cpp  robotic_optimizer_node.cpp  visualization.cpp
urdf/: total_urdf.urdf.xacro  world_urdf.urdf.xacro
